--- a/hunspell-fa/PKGBUILD
+++ b/hunspell-fa/PKGBUILD
@@ -4,21 +4,19 @@
 pkgname=hunspell-fa
 pkgver=0.11
 pkgrel=1
-pkgdesc="Persian dictionaries for hunspell"
-url="http://ftp.gnu.org/gnu/aspell/dict/0index.html"
-arch=(any)
-license=("LGPL2")
-depends=()
-makedepends=("hunspell" "aspell")
-optdepends=("hunspell: the spell checking libraries and apps")
-provides=("${pkgname}")
+pkgdesc='Persian dictionaries for hunspell'
+url='http://ftp.gnu.org/gnu/aspell/dict/0index.html'
+arch=('any')
+license=('LGPL2' 'GPL2')
+depends=('hunspell')
+makedepends=('aspell')
 source=("http://ftp.gnu.org/gnu/aspell/dict/fa/aspell6-fa-${pkgver}-0.tar.bz2")
-sha256sums=("482d26ea879a8ea02d9373952205f67e07c85a7550841b13b5079bb2f9f2e15b")
+sha256sums=('482d26ea879a8ea02d9373952205f67e07c85a7550841b13b5079bb2f9f2e15b')
 
 prepare() {
     cd "${srcdir}/aspell6-fa-${pkgver}-0"
     
-    msg "converting aspell dictionaries..."
+    msg 'converting aspell dictionaries...'
     LANG=fa_IR.utf8 preunzip -d *.cwl
     cat *.wl > persian.wordlist
     wordlist2hunspell persian.wordlist fa_IR
